# binance-trade-bot

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
backtest/: preare-data.ts
sdk/: enums.ts  env.ts  info.ts  types.ts  utils.ts
src/: main.rs  prepare_data.rs
src/backtest/: mod.rs  three-bar.ts  three_bar.rs
src/sdk/: enums.rs  enums.ts  env.rs  info.rs  mock-trade.ts  mock_trade.rs  mod.rs  types.rs  types.ts  utils.rs  utils.ts
src/strategy/: mod.rs  three_bar.rs  trhee-bar.ts
strategy/: trhee-bar.ts  utils.ts
test/sdk/: info.spec.ts
