[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
ta = "0.5"
sqlite = "0.31"
lazy_static = "1.4" 