[package]
name = "binance-data-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
chrono = "0.4"
anyhow = "1.0"
tempfile = "3.8"
csv = "1.3"
barter = "0.9.1"
ta = "0.4"
barter-data = "0.9.1"
barter-integration = "0.8.0"
barter-instrument = "0.2.0"
